<resources>
    <string name="google_maps_api">AIzaSyAK7NnlD9JE1QUEXr4hnfR0h36CqqLzUeg</string>
    <string name="app_name">personalreminder</string>
    <string name="share_url">Lembrete URL</string>
    <string name="filter">Filtro</string>
    <string name="location">Localização</string>
    <string name="time">Tempo</string>
    <string name="selectWifi">Selecionar rede Wifi</string>
    <string name="selectBluetooth">Selecionar disposítivo Bluetooth</string>
    <string name="clipboard">Criar nota usando:</string>
    <string name="turnOnBluetooth">Por favor ligue o Bluetooth para usar este tipo de lembrete.</string>
    <string name="turnOnWiFi">Por favor ligue o WiFi para usar este tipo de lembrete.</string>
    <string name="remindersActivityTitle">Lembretes</string>
    <string name="newReminders">Lembretes Novos</string>
    <string name="oldReminders">Lembretes Feitos</string>
    <string name="configs">Configurações</string>
    <string name="hintFilter">Palavra-chave</string>
    <string name="emptyList">Nenhum item a ser exibido.</string>
    <string name="number_reminders_new">lembretes ativos</string>
    <string name="number_reminders_old">lembretes completados</string>
    <string name="simple">Simples</string>
    <string name="when_is">Se conectar em</string>
    <string name="when_isnot">Se desconectar de</string>
    <string name="really_delete">Tem certeza que deseja deletar este lembrete?</string>
    <string name="really_delete_folder">Tem certeza que deseja deletar a pasta %1$s?</string>
    <string name="really_delete_all">Tem certeza que deseja deletar TODOS os lembretes?</string>
    <string name="cannot_be_undone">Esta ação não pode ser desfeita!</string>
    <string name="yes_delete">Deletar lembrete</string>
    <string name="no_delete">Não deletar</string>
    <string name="yes_back">Continuar</string>
    <string name="no_back">Voltar</string>
    <string name="deleted">Deletado!</string>
    <string name="reminder_deleted">O seu lembrete foi deletado!</string>
    <string name="folder_deleted">A sua pasta foi deletada!</string>
    <string name="please_fill_reminder">Preencher com algum lembrete</string>
    <string name="contected_to">Conectado em</string>
    <string name="descontected_to">Desconectado de</string>
    <string name="select_contact">Selecione um contato</string>
    <string name="when_dialog">Quando</string>
    <string name="apply">Aplicar</string>
    <string name="you_are_in">Você está em</string>
    <string name="recover_deleted">Para recuperar sua última notificação deletada, vá para as configurações</string>
    <string name="copy_note">Copiar Nota</string>
    <string name="copy_extra">Copiar Extra</string>
    <string name="reshedule">Reagendar</string>
    <string name="reminder_triggered">Lembrete disparado!</string>
    <string name="type">Tipo</string>
    <string name="icon">Ícone</string>
    <string name="default_share">Padrão:</string>
    <string name="favorites_share">Favoritos:</string>
    <string name="swipe_to_confirm">Deslize para confirmar</string>
    <string name="will_delete_everything">ATENÇÃO: Isso irá deletar todos os seus lembretes!</string>
    <string name="private_reminders">Lembretes Privados</string>
    <string name="password_instructions">Configure abaixo um PIN de 4 dígitos para usar como senha para suas notas privadas.</string>
    <string name="enter_with_PIN">Entrar com PIN</string>
    <string name="instructions_fingerprint">Entre com sua digital no sensor para ver os lembretes privados, ou clique no botão "Entrar com PIN" para ultilizar sua senha.</string>
    <string name="instructions_PIN">Entre com sua senha para ver os lembretes privados.</string>
    <string name="folders">Pastas</string>
    <string name="favorites">Favoritos</string>
    <string name="folder_hint">Nome da pasta</string>
    <string name="insert_folder_name">Insira um nome para a pasta!</string>
    <string name="new_folder">Nova pasta</string>
    <string name="folder_already">Pasta já existente!</string>
    <string name="really_goback">Realmente deseja voltar?</string>
    <string name="alt_will_not_save">Nenhuma alteração será salva!</string>
    <string name="folder_too_long">Nome de pasta muito longo!</string>
    <string name="deleteOld_explain">Irá deletar todos os lembretes finalizados depois de um mês.</string>
    <string name="powersave_explain">O modo de economizar bateria irá diminuir a frequencia com que checamos sua localização ou redes WiFi, estes tipos de lembretes talvez não apareçam sempre no momento certo.</string>
    <string name="skip">PULAR</string>
    <string name="all">Todos</string>
    <string name="no_folder">Sem pasta</string>
    <string name="first_reminder">Seu primeiro lembrete!</string>
    <string name="tut_condition">Rede de Exemplo 1</string>
    <string name="tut_condition2">Rede de Exemplo 1</string>
    <string name="tut_condition3">Rede de Exemplo 1</string>
    <string name="tut_condition4">Rede de Exemplo 1</string>
    <string name="tut_link">https://www.exemplo.com.br</string>
    <string name="tut3_13">Meus parabéns você concluiu o tutorial do aplicativo e está pronto para usá-lo!</string>
    <string name="tut3_12">No menu de configurações também encontramos um atalho para revizitar este tutorial!</string>
    <string name="tut3_11">Configurações\nPermite gerenciar as configurações do aplicativo, algumas configurações que você vai encontrar são:\nFavoritos\nAparencia do App\nConfigurações de lembretes privados e senha</string>
    <string name="tut3_10">Pastas\nPermite gerenciar suas pastas.</string>
    <string name="tut3_9">Lembretes Privados\nPermite visualizar seus lembretes privados.</string>
    <string name="tut3_8">Lembretes Antigos\nPermite visualizar seus lembretes que foram marcados como feitos.</string>
    <string name="tut3_7">Lembretes Novos\nPermite visualizar seus lembretes que não foram marcados como feitos.</string>
    <string name="tut3_6">Neste menu temos as seguintes opções...</string>
    <string name="tut3_5">Também exite um menu lateral que permite a navegação para diversas partes do app, clique aqui para abri-lo.</string>
    <string name="tut3_4">Neste menu de filtro você poderá selecionar lembretes com base no seu tipo, ou procurar por uma palavra chave!</string>
    <string name="tut3_3">Filtro\nClicando neste icone irá abrir um menu de filtro, tente você mesmo!</string>
    <string name="tut3_2">Pastas\nClicando neste icone você poderá abrir uma pasta de lembretes, assim poderá ver apenas o que é importante no momento!</string>
    <string name="tut3_1">Outra opção importante é a capacidade de achar os lembretes certos na hora certa!\nPara isso temos duas opções...</string>
    <string name="tut2_9">Ao clicar em visualizar será apresentado uma nova janela para se verificar detalhes sobre o lembrete, assim como opções relacionadas a ele.\nClique em visualizar para verificar essas opções.</string>
    <string name="tut2_8">Visualizar</string>
    <string name="tut2_7">Editar</string>
    <string name="tut2_6">Deletar</string>
    <string name="tut2_5">No menu lateral temos as seguintes opções...</string>
    <string name="tut2_4">Clicando no lembrete são reveladas mais opções.</string>
    <string name="tut2_3">Usando este botão podemos definir o lembrete como terminado.</string>
    <string name="tut2_2">Nesta tela podemos verificar as informações básicas dele.</string>
    <string name="tut2_1">Parabens você criou seu primeiro lembrete!</string>
    <string name="tut1_13">Ao clicar na rede você será levado a uma nova tela para configurar o resto do seu lembrete.</string>
    <string name="tut1_12">Escolha esta rede de exemplo para prosseguir com o tutorial.</string>
    <string name="tut1_11">Ao selecionar o lembrete de WiFi, uma janela sera mostrada para se escolher a Rede desejada, outros tipos de lembrete iram mostrar diferentes janelas para selecionar sua condição.</string>
    <string name="tut1_10">Vamos começar aprendendo a criar um lembrete de Wifi, clique no icone para continuar.</string>
    <string name="tut1_9">Favoritos\nCria lembretes com condições pré definidas de Bluetooth, WiFi, Localização ou Tempo.</string>
    <string name="tut1_8">Simples\nNão gera notificações.</string>
    <string name="tut1_7">Tempo\nNotifica em um horário pré definido.</string>
    <string name="tut1_6">Localização\nNotifica quando seu celular estiver em uma localização escolhida.</string>
    <string name="tut1_5">WiFi\nNotifica quando uma rede WiFi escolhida estiver visível para o seu ceular.</string>
    <string name="tut1_4">Bluetooth\nNotifica quando um dispositivo bluetooth escolhido for pareado com seu ceular.</string>
    <string name="tut1_3">Este menu irá apresentar diversas opções de lembretes, por exemplo...</string>
    <string name="tut1_2">Para criar um novo lembrete clique no icone abaixo.</string>
    <string name="tut1_1">Bem vindo ao NOMEDOAPP, com NOMEDOAPP você poderá criar lembretes para as mais diversas situações!\n\n Este tutorial irá lhe ensinar os básicos do aplicativo, caso não deseje ver o tutorial clique no alto da tela para pular o mesmo, clique em qualquer outro lugar para continuar.</string>
    <string name="tut_skip">Você pode revisitar este tutorial quando quiser no menu de configurações.</string>
    <string name="type_Wifi">Rede WiFi</string>
    <string name="type_Blue">Dispositivo Bluetooth</string>
    <string name="type_Loc">Local</string>
    <string name="type_Time">Horário</string>
    <string name="condition">Condição</string>
    <string name="editTut_11">Caso contrário você pode salvar seu lembrete, clique em salvar para continuar.</string>
    <string name="editTut_10">Depois de terminar seu lembrete, caso não esteja satisfeito, você pode cancelar sua criação.</string>
    <string name="editTut_9">Aqui podemos selecionar se o lembrete fará parte de alguma pasta, pastas ajudam a separar os lembretes de diferentes assuntos e manter sua organização!</string>
    <string name="editTut_8">Aqui podemos definir o lembrete como privado, lembretes privados só podem ser visualizados caso você tenha a senha.\n\nOBS:Para ativar lembretes privados vá até as configurações.</string>
    <string name="editTut_7">Também podemos definir o lembrete como um link, para isso apenas digite o link no campo extra, definindo o extra como um link irá oferecer a opção de abrir no navegador ou compartilhar o link quando o lembrete for ativado ou visualidado.</string>
    <string name="editTut_6">Clicando neste botão podemos definir que o extra será um contato do seu celular, definindo o extra como um contato irá oferecer a opção de realizar uma ligação telefonica quando o lembrete for ativado ou visualidado.</string>
    <string name="editTut_5">Este campo será uma informação extra ligada ao lembrete, por exemplo...</string>
    <string name="editTut_4">Este campo será o lembrete em si.</string>
    <string name="editTut_3">Neste campo definimos a rede WiFi que irá ativar o lembrete.</string>
    <string name="editTut_2">Neste campo definimos se o lembrete vai ser disparado quando conectarmos ou desconectarmos da rede.</string>
    <string name="editTut_1">Esta é a tela de edição de lembrete, nela você pode configurar um lembrete novo ou editar um já existente.</string>
    <string name="share">Share</string>
    <string name="viewTut_6">Clique no botão de fechar para continuar.</string>
    <string name="viewTut_5">Neste menu temos mais opções relacionadas ao lembrete, como copiar seu conteúdo ou reagenda-lo.</string>
    <string name="viewTut_4">Caso nosso extra fosse um contato, teriamos a opção de realizar uma ligação para seu número.</string>
    <string name="viewTut_3">Também temos a opção de compartilhar o link.</string>
    <string name="viewTut_2">Como o extra do nosso lembrete é um link, temos a opção de abrir o mesmo no navegador.</string>
</resources>