<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context="com.ragabuza.personalreminder.ui.Folders">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp">

        <ListView
            android:id="@+id/lvFolders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:animateLayoutChanges="true"
            android:layoutAnimation="@anim/example" />

        <TextView
            android:id="@+id/tvEmpty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:text="@string/emptyList"
            android:textAlignment="center"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/favorite_background"
            android:gravity="center_vertical"
            android:padding="8dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilAfterAdd"
                android:visibility="gone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/etAfterAdd"
                    android:hint="@string/folder_hint"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/ivAddFolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add" />

            <LinearLayout
                android:id="@+id/llBeforeAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:gravity="center"
                    android:text="@string/new_folder"
                    android:textColor="@android:color/black" />

                <Space
                    android:layout_width="24dp"
                    android:layout_height="24dp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
